compiler/lyra/src/test/resources/semantic_errors/ExtendInterface.ly
interface I { }
class A extends I { }

class Application {
    def main { }
}